--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "FunGroovy";
+  src: url("assets/fonts/FunGroovy.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
